If a letter is correct but in the wrong position it becomes yellow

--- a/WordGame.css
+++ b/WordGame.css
@@ -56,7 +56,3 @@ input{
     margin: 4px;
     text-transform: uppercase;
 }
-/* #letterBox1{
-    color: rgb(241, 255, 50);
-    border-color: rgb(241, 255, 50);
-} */
